--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <title>DOCUMENT</title>
 </head>
 <body>
+    <!--heading -->
     <h1>git test</h1>
     <a href="./afra/home.html">test</a>
+
+    <a href="https://www.theodinproject.com/paths/foundations/courses/foundations">odin project</a>  
+
+    <p>my friend <strong>how</strong>  <em>is</em> the job</p>
 </body>
 </html>
